spacing fixes

--- a/styles.css
+++ b/styles.css
@@ -86,6 +86,10 @@ h2 {
   font-family: 'montserrat',sans-serif;
 }
 
+.h2contact {
+  padding-top: 30px;
+}
+
 h3{
   color: #E04D01;
   font-family: 'montserrat',sans-serif;
